Default JVM tuning works better than anything else on long runs
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@14286 219f1c6e-4a0e-43c8-96f2-6e749be13fd4