@@ -70,32 +70,12 @@ if [ `expr $JAVA_HOME : ".*1\.4.*"` != 0 ]; then
 	# default_java_opts="$default_java_opts -XX:+UseParNewGC -XX:ParallelGCThreads=$cpucount "
 	default_java_opts="$default_java_opts -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=90"
 	default_java_opts="$default_java_opts -XX:SurvivorRatio=128 -XX:MaxTenuringThreshold=0"
-elif [ `expr $JAVA_HOME : ".*1\.5\.0_06*"` != 0 ]; then
-	# fujitsu did a benchmark using this tuning: 
-	# -Xbatch -Xss256K -Xms360G -Xmx360G -Xmn300G -XX:+UseISM -XX:+AggressiveHeap -XX:+UseParallelOldGC 
-	# This will likely have big latency times but the best performance
-	default_java_opts="$default_java_opts -Xbatch -XX:+AggressiveHeap XX:+UseParallelOldGC"
-	# Only if 1.5.0_06 
-	# use the jvm file above to set this
-	# Sun tried this:
-	# -Xbatch -XX:+AggressiveHeap -Xss256k -Xmx176g -Xms176g -Xmn133g -XX:+UseBiasedLocking -classpath
-else 
-	# Next two lines are consistent low latency at the expense of 40% performance
-	# default_java_opts="$default_java_opts -XX:ParallelGCThreads=$gcthreads -XX:+UseConcMarkSweepGC"
-	# default_java_opts="$default_java_opts -XX:+UseParNewGC -XX:SurvivorRatio=8 -XX:TargetSurvivorRatio=90 -XX:MaxTenuringThreshold=15"
-	# default options include batch: This may be commented out: it pauses all threads during GC
-	default_java_opts="$default_java_opts -Xbatch" 
-	# uncomment ONE of these gc options
-	# Standard
-	default_java_opts="$default_java_opts -XX:+UseParallelGC " 
-	# or comment them all out to let the JVM decide 
-	# throughput collector with an added "maximum pause time
-	#default_java_opts="$default_java_opts -XX:+UseParallelGC -XX:MaxGCPauseMillis=1000" 
-	# throughput collector "new"
-	#default_java_opts="$default_java_opts -XX+UseParNewGC" 
-	# concurrent low pause collector: Showed low performance
-	#default_java_opts="$default_java_opts -XX+UseConcMarkSweepGC"
 fi
+
+#
+# Sun's tuning works fine for 1.5.0_05 and above. No need to play with it.
+#
+
 unset gcthreads
 unset cpucount
 
